# city3d-stac-registry

./: .gitignore  .gitmodules  AGENTS.md  API_DESIGN.md  ARCHITECTURE.md  CARGO_STRUCTURE.md  CLAUDE.md  CLI_DESIGN.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  DESIGN_DOC.md  DEVELOPMENT_PLAN.md  IMPLEMENTATION_PLAN.md  Justfile  LICENSE  Makefile  PROJECT_SUMMARY.md  README.md  STAC_EXTENSION.md  paper_notes.md  plan.md  progress.md  references.md  review.md  task.md  tasks.md
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.compose.json  devcontainer.dockerfile.json  devcontainer.json  docker-compose.yml  install-claude-plugins.sh
.githooks/: pre-commit
.github/: dependabot.yml
.serena/: project.yml
catalog/: catalog-config.yaml
collections/: american-cities-config.yaml  auvergne-rhone-alpes-eleven-sectors-craig-config.yaml  auvergne-rhone-alpes-zae-craig-config.yaml  baden-wurttemberg-lgl.yaml  bavaria-bvv.yaml  berlin-config.yaml  bordeaux-config.yaml  brandenburg-lgb.yaml  brussels-config.yaml  cambridge-config.yaml  freiburg-stadt.yaml  hamburg-config.yaml  hannover-stadt.yaml  helsinki-config.yaml  hessen-hvbg-config.yaml  ingolstadt-config.yaml  isere-craig-config.yaml  japan-plateau-config.yaml  kuopio-municipal.yaml  leipzig-stadt-config.yaml  linz-config.yaml  luxembourg-config.yaml  namur-config.yaml  netherlands-3d-bag-config.yaml  new-york-tum-config.yaml  niedersachsen-lgln-config.yaml  nordrhein-westfalen-geobasis-config.yaml  north-rhine-westphalia-config.yaml  potsdam-config.yaml  rheinland-pfalz-lvermgeo-config.yaml  (+6 more)
(+156 files in other folders)
