[package]
name = "cityjson-stac"
version = "0.1.0"
edition = "2021"
authors = ["CityJSON Contributors"]
description = "Generate STAC metadata for CityJSON datasets"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cityjson/cityjson-stac"
readme = "README.md"
keywords = ["stac", "cityjson", "3d", "gis", "geospatial"]
categories = ["command-line-utilities", "science::geo"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File I/O and directory traversal
walkdir = "2.4"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Geometry
geojson = { version = "0.24", features = ["geo-types"] }
geo-types = "0.7"

# Logging
log = "0.4"
env_logger = "0.11"

# FlatCityBuf support
fcb_core = "0.6"

# URL handling for STAC links
url = { version = "2.5", features = ["serde"] }

# Optional: for parallel processing
rayon = { version = "1.10", optional = true }

[dev-dependencies]
tempfile = "3.10"
assert_cmd = "2.0"
predicates = "3.1"
pretty_assertions = "1.4"

[features]
default = []
parallel = ["rayon"]

[[bin]]
name = "cjstac"
path = "src/main.rs"

[lib]
name = "cityjson_stac"
path = "src/lib.rs"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
